--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.10.0 by Michael Rose
+  TeroRERO GNU Jekyll Theme 4.10.0 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
