Incluyendo meses in Spanish.

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -14,6 +14,22 @@ layout: default
   {% endunless %}
 {% endif %}
 
+{% assign m = page.date | date: "%-m" %}
+{% case m %}
+  {% when '1' %}Enero
+  {% when '2' %}Febrrero
+  {% when '3' %}Marzo
+  {% when '4' %}Abril
+  {% when '5' %}Mayo
+  {% when '6' %}Junio
+  {% when '7' %}Julio
+  {% when '8' %}Agosto
+  {% when '9' %}Septiembre
+  {% when '10' %}Octubre
+  {% when '11' %}Noviembre
+  {% when '12' %}Diciembre
+{% endcase %}
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
