--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,4 +22,4 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://devinconde.com" rel="nofollow"> ThE_Exis TEAM</a>.</div>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.description | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://devinconde.com" rel="nofollow"> ThE_Exis TEAM</a>.</div>
