Modificando site.description en footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,4 +22,6 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
+<div class="page__footer-copyright">
+    <p>{{ site.description }}</p>
+    <p>&copy; {{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
