--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,5 +23,4 @@
 </div>
 
 <div class="page__footer-copyright">
-    <p>{{ site.description }}</p>
-    <p>&copy; {{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
+    <p>{{ site.description }}</p>&copy; {{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
