Tunning colors site.

--- a/_sass/minimal-mistakes/skins/_colega.scss
+++ b/_sass/minimal-mistakes/skins/_colega.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Bitacora skin
+   Colegas skin
    ========================================================================== */
 
 /* Colors */
