--- a/_sass/minimal-mistakes/skins/_zimbron.scss
+++ b/_sass/minimal-mistakes/skins/_zimbron.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   Bitacora skin
+   Zimbron skin
    ========================================================================== */
 
 /* Colors */
