--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,4 +22,4 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">{{ site.description }}<br>&copy; {{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
+<div class="page__footer-copyright">{{ site.description }}<br>&copy; 2001 -{{ site.time | date: '%Y' }} {{ site.myfooter | default: site.title }}. {{ site.data.ui-text[site.locale].derecho_reservado | default: "Todos los derechos reservados." }}</div>
