--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -138,7 +138,9 @@
     border-radius: $border-radius;
 
     &:hover {
-      @include yiq-contrasted($muted-text-color);
+      /*@include yiq-contrasted($muted-text-color);
+      TeroRERO cambia al color oficial del sitio */
+      @include yiq-contrasted(#124f7b);
     }
 
     &:first-child {
